--- a/app/scss/_segmented-bar.scss
+++ b/app/scss/_segmented-bar.scss
@@ -6,5 +6,10 @@ SegmentedBar.segmented-bar{
   border-radius: 0;
   padding: 0;
   color: $dark-red;
+  margin: 0;
+  .segmented-bar-item{
+      padding: 0;
+      margin: 0;
+  }
 }
 
